Updated styling to make sure visualizer doesn't get cropped out

--- a/static/css/music/music.css
+++ b/static/css/music/music.css
@@ -49,7 +49,7 @@
 #barCanvas
 {
     width: 100%;
-    height: 60vh;
+    height: 75%;
 }
 
 
@@ -155,6 +155,7 @@ input[type="range"]::-webkit-slider-thumb {
 .main-button:hover
 {
     -webkit-filter: brightness(0.6);
+    cursor: pointer;
 }
 
 marquee
